--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
-site_url: https://ntn-boilerplate.netlify.app/
-logo_url: https://ntn-boilerplate.netlify.app/icon.png
+site_url: https://willowy-salamander-66a952.netlify.app/
+logo_url: https://willowy-salamander-66a952.netlify.app/icon.png
 
 publish_mode: editorial_workflow
 backend:
@@ -23,7 +23,7 @@ collections:
         file: 'content/site/info.json'
         format: 'json'
         editor:
-          preview: false
+          preview: true
         fields:
           - { label: Site Name, name: sitename, widget: string, hint: 'This is used for the site title' }
           - {
