--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,7 @@ logo_url: https://willowy-salamander-66a952.netlify.app/icon.png
 publish_mode: editorial_workflow
 backend:
   name: git-gateway
+  repo: narr07/netlifycms-narr
   branch: master
   squash_merges: true
 
